--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,6 @@
 *.i*86
 *.x86_64
 *.hex
-aht20
 
 # Debug files
 *.dSYM/
@@ -51,3 +50,8 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+# localwork additions
+aht20
+aht20-reader
+build
